# hybrid-futr

./: LICENSE  README.md
AgiBizSys/: AgiBizSys.txt
CASE STUDIES/ONE/: README.md
CASE STUDIES/THREE/: README.md
CASE STUDIES/TWO/DATA/WEBSCRAPER/: webscraper.py
CASESTUDIES/: README.md
CASESTUDIES/ONE/: README.md
CASESTUDIES/TWO/: README.md
CASESTUDIES/TWO/DATA/: README.md
CASESTUDIES/TWO/DATA/2022nlwest/: README.md
CASESTUDIES/TWO/DATA/WEBSCRAPER/: README.md
CASESTUDIES/TWO/FILES/: README.md
FRAMEWORKS/: README.md  frameworks.md
PORTFOLIO/THREE/: frameworks.docx
PORTFOLIO/THREE/djang1/mysite/: db.sqlite3
PORTFOLIO/THREE/djang1/mysite/mysite/: settings.py
PORTFOLIO/TWO/p1TWO/: Project1.txt
PROOFS/: README.md
PROOFS/FOUR/: README.md
PROOFS/ONE/: README.md
PROOFS/ONE/2020nlwest/.ipynb_checkpoints/: mlbstatcast-checkpoint.ipynb
PROOFS/ONE/BUILDS/: README.md
PROOFS/ONE/BUILDS/2022nlwest/: 2022nlwest.ipynb  README.md
PROOFS/ONE/BUILDS/WEBSCRAPER/: README.md  books.csv
PROOFS/ONE/DATA BUILDS/2022nlwest/: pyproject.toml
PROOFS/ONE/DATA BUILDS/WEBSCRAPER/: books.csv
PROOFS/ONE/EXAMPLES/: README.md
PROOFS/ONE/FINE/: README.md
PROOFS/ONE/GENERAL/: README.md
PROOFS/ONE/GENERAL/WEBSCRAPER/: README.md  books.db  webscraper.py
PROOFS/THREE/: README.md
PROOFS/THREE/DJANGO1/mysite/: README.md
PROOFS/TWO/: README.md
PROOFS/TWO/FILES/: README.md
PROOFS/TWO/FINE/: README.md
PROOFS/TWO/GENERAL/: README.md
info/: 0_info.txt  info.txt
web_app/: web_app.js  web_app.sql  web_app.txt  web_app_many.js
(+3 files in other folders)
