[tool.poetry]
name = "mlbstatcast"
version = "0.1.0"
description = ""
authors = ["J.F. Ramirez <admin@hybridfutr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybaseball = "^2.2.1"
notebook = "^6.4.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
